<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etnombre"
        android:hint="@string/nombre"
        android:layout_marginTop="26dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etdescri"
        android:layout_below="@+id/etnombre"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp"
        android:hint="@string/descri" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/etprecio"
        android:layout_below="@+id/etdescri"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp"
        android:hint="@string/precio" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:id="@+id/scrollView"
        android:layout_below="@+id/etprecio"
        android:layout_alignParentStart="true"
        android:layout_marginTop="44dp">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/etinformacion"
            android:hint="@string/info"
            android:layout_below="@+id/etprecio"
            android:layout_alignParentStart="true" />
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_below="@id/scrollView"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="168dp"
            android:layout_centerVertical="true"
            android:layout_below="@+id/etprecio"
            android:layout_alignParentStart="false"
            android:id="@+id/rb"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tinto"
                android:id="@+id/rb1"
                android:layout_gravity="center_horizontal" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blanco"
                android:id="@+id/rb3"
                android:layout_gravity="right" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rosado"
                android:id="@+id/rb2"
                android:layout_gravity="left|center_horizontal" />

        </RadioGroup>
    </LinearLayout>

</RelativeLayout>